--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.4.6",
+    "fsevents": "^2.1.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
