--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.4.6",
     "fsevents": "^2.1.2",
     "js-cookie": "2.2.0",
+    "moment": "^2.24.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "qiniu-js": "^2.5.1",
