--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
+    "echarts": "^4.6.0",
     "element-ui": "^2.4.6",
     "js-cookie": "2.2.0",
     "moment": "^2.24.0",
